<resources>
    <string name="app_name">TAGAVA</string>
    <string name="register_text">Don\'t have account yet ?<u><b>Click here for Register</b> </u></string>
    <string name="forgot_password_text"><u>Forgot Password</u></string>
    <string name="mobile_number_hint">Enter mobile number e.g 9876543210</string>
    <string name="password_hint_text">Enter password here e.g 1234</string>
    <string name="welcome_text">Login to TAGAVA</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_addcustomer">Add Customer</string>
    <string name="register">Register</string>
    <string name="invalid_nmuber">Please enter valid mobile number.</string>
    <string name="title_customer_dashboard">Customer Dashboard</string>
    <string name="tranaction">Payment</string>
    <string-array name="category">
        <item>Top News</item>
        <item>Business</item>
        <item>Politics</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Movies</item>
    </string-array>
</resources>
