<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tagava.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_customer_dashboard"
        android:name="com.tagava.ui.customer_dashboard.CustomerDashboardFragment"
        android:label="{custName}"
        app:popUpToInclusive="true"
        tools:layout="@layout/fragment_customer_dashboard">
        <argument
            android:name="custid"
            app:argType="string" />
        <argument
            android:name="custName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addcustomer"
        android:name="com.tagava.ui.addacustomer.AddCustomerFragment"
        android:label="@string/title_addcustomer"
        tools:layout="@layout/fragment_addcustomer" />
    <dialog
        android:id="@+id/navigation_transaction"
        android:name="com.tagava.ui.transaction.TransactionDialogFragment"
        android:label="@string/tranaction"
        tools:layout="@layout/transaction_dialog_fragment">
        <argument
            android:name="custid"
            app:argType="string" />
        <argument
            android:name="type"
            app:argType="string" />
    </dialog>

</navigation>
