<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#fff">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/logo_background"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="15dp"
        android:background="@drawable/login_background"
        >
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/login_title"
            android:layout_marginTop="16dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_textView"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.appcompat.widget.AppCompatEditText
        app:layout_constraintTop_toBottomOf="@+id/logo_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/mobile_number_hint"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_id_input"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"/>

    <!--    <androidx.appcompat.widget.AppCompatEditText-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/user_id_input"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        android:hint="@string/password_hint_text"-->
    <!--        android:textColor="#000"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/user_id_password"-->
    <!--        android:layout_marginTop="20dp"/>-->

    <Button
        app:layout_constraintTop_toBottomOf="@+id/user_id_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@drawable/button_background"
        android:id="@+id/login_button"
        android:layout_marginTop="15dp"
        android:text="Login"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_textView"
        android:text="@string/forgot_password_text"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginBottom="20dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_textView"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        />

    <ProgressBar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:elevation="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>